Image augmentation is done

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -839,10 +839,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "b1ab2d18-e660-4d94-8f51-dc9505742a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\moham\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:516: FitFailedWarning: \n",
+      "160 fits failed out of a total of 320.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "160 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\moham\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 859, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "    ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\moham\\anaconda3\\Lib\\site-packages\\scikeras\\wrappers.py\", line 1501, in fit\n",
+      "    super().fit(X=X, y=y, sample_weight=sample_weight, **kwargs)\n",
+      "    ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\moham\\anaconda3\\Lib\\site-packages\\scikeras\\wrappers.py\", line 770, in fit\n",
+      "    self._fit(\n",
+      "    ~~~~~~~~~^\n",
+      "        X=X,\n",
+      "        ^^^^\n",
+      "    ...<3 lines>...\n",
+      "        **kwargs,\n",
+      "        ^^^^^^^^^\n",
+      "    )\n",
+      "    ^\n",
+      "  File \"C:\\Users\\moham\\anaconda3\\Lib\\site-packages\\scikeras\\wrappers.py\", line 936, in _fit\n",
+      "    self._check_model_compatibility(y)\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^\n",
+      "  File \"C:\\Users\\moham\\anaconda3\\Lib\\site-packages\\scikeras\\wrappers.py\", line 579, in _check_model_compatibility\n",
+      "    raise ValueError(\n",
+      "    ...<2 lines>...\n",
+      "    )\n",
+      "ValueError: loss=categorical_crossentropy but model compiled with binary_crossentropy. Data may not match loss function!\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "C:\\Users\\moham\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1135: UserWarning: One or more of the test scores are non-finite: [1.       1.            nan      nan 1.       0.897375      nan      nan\n",
+      " 0.798    1.            nan      nan 1.       1.            nan      nan\n",
+      " 0.896625 1.            nan      nan 1.       1.            nan      nan\n",
+      " 1.       1.            nan      nan 0.898375 1.            nan      nan\n",
+      " 0.899625 1.            nan      nan 0.899625 1.            nan      nan\n",
+      " 1.       1.            nan      nan 1.       1.            nan      nan\n",
+      " 0.898375 1.            nan      nan 1.       0.794         nan      nan\n",
+      " 1.       1.            nan      nan 1.       1.            nan      nan]\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'batch_size': 10, 'epochs': 2, 'loss': 'binary_crossentropy', 'optimizer': 'adam'}\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Improving the ANN - Hyper parameter optimization \n",
     "from scikeras.wrappers import KerasClassifier\n",
